# ironic-python-agent-builder

./: .gitignore  .gitreview  .zuul.yaml  CONTRIBUTING.rst  README.rst  requirements.txt  setup.cfg  test-requirements.txt  tox.ini
.github/workflows/: ipa-ramdisk-build.yml
dib/: build.sh
dib/burn-in/: README.rst  package-installs.yaml
dib/extra-hardware/: README.rst  element-deps  package-installs.yaml  pkg-map
dib/fluidstack-gpu/: README.rst
dib/fluidstack-ironwood/: package-installs.yaml
dib/ironic-python-agent-ramdisk/: README.rst  element-deps  package-installs.yaml  pkg-map  source-repository-ironic-lib  source-repository-ironic-python-agent  source-repository-requirements  svc-map
dib/ironic-python-agent-tls/: README.rst  element-deps  package-installs.yaml
dib/ironic-ramdisk-base/: README.rst  element-deps
dib/multipath-io/: README.md  element-deps  package-installs.yaml
doc/source/: conf.py  index.rst
ironic_python_agent_builder/: __init__.py
playbooks/ironic-python-agent-build-image/: extra-logs.yaml  post.yaml  pre.yaml  run.yaml
releasenotes/notes/: add-efibootmgr-d2a456de6b999612.yaml  add-efivar-f83fdf2d797396dc.yaml  add-ntpdate-3db2f8565fed761e.yaml  add-nvme-cli-590e42735476a549.yaml  add-simple-init-by-default-cfaa05c8178de93f.yaml  centos7-python3-185f1d35c37096c7.yaml  centos8-46a95956fd871c90.yaml  centos8-stream-55d4100dcf3aaa8f.yaml  centos8-stream-d9c83190e987e07d.yaml  centos9-0f925822a2ab9e0a.yaml  clean-var-tmp-with-dib-builds-cd31a2cf70a7f935.yaml  create-ramdisk-random-devices-263f78a2ef40dbe2.yaml  cs10support-f8d2996aaf7505ad.yaml  debian-9a4fa6b2d3ef96d0.yaml  debian-arm64-fc3cc4949e3100d9.yaml  debian-firmware-1927601ebb779bc4.yaml  debian-ipa-cb5975e436cba525.yaml  debian-trixie-e79ed0ba2a42befa.yaml  dhcp-predictible-ifnames-b2a1d9e6471b6819.yaml  drop-python2-534124afa50f62dd.yaml  drop-tinyipa-support-628b5a8d92b4af15.yaml  excess-firmware-removal-debian-06c49a8604122b1c.yaml  extra-hardware-73e3c9b5a0143bfa.yaml  fix-early-fail-if-no-config-drive-2085609b044ac85f.yaml  fix-firmware-cleanup-revisited-3047b3bf415bc91c.yaml  fix-glean-configdrive-lockout-4afaa99a06e7a785.yaml  lzma-bf4552b98dd5824a.yaml  (+21 more)
tinyipa/: Makefile  README.rst  add-ssh-tinyipa.sh  build-instance-images.sh  build-iso.sh  build-tinyipa.sh  common.sh  finalise-tinyipa.sh  generate_tox_constraints.sh  generate_upper_constraints.sh  install-deps.sh  tc-mirror.sh  udhcpc.script
zuul.d/: ironic-python-agent-builder-jobs.yaml  project.yaml
(+79 files in other folders)
