[metadata]
name = ironic-python-agent-builder
summary = Tools and scripts to build Ironic Python Agent
description-file =
    README.rst
author = OpenStack
author-email = openstack-discuss@lists.openstack.org
home-page = https://docs.openstack.org/ironic-python-agent-builder/latest/
classifier =
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux

[entry_points]
console_scripts =
    ironic-python-agent-builder = ironic_python_agent_builder:main

[files]
packages =
    ironic_python_agent_builder
# TODO(dtantsur): figure out a sane way to distribute tinyipa scripts
data_files =
    share/ironic-python-agent-builder/dib = dib/*

[build_sphinx]
all-files = 1
warning-is-error = 1
source-dir = doc/source
build-dir = doc/build

[upload_sphinx]
upload-dir = doc/build/html
