[metadata]
name = ironic-python-agent-builder
summary = Tools and scripts to build Ironic Python Agent
description_file =
    README.rst
author = OpenStack
author_email = openstack-discuss@lists.openstack.org
home_page = https://docs.openstack.org/ironic-python-agent-builder/latest/
classifier =
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux

[entry_points]
console_scripts =
    ironic-python-agent-builder = ironic_python_agent_builder:main

[files]
packages =
    ironic_python_agent_builder
# TODO(dtantsur): figure out a sane way to distribute tinyipa scripts
data_files =
    share/ironic-python-agent-builder/dib = dib/*
